--- a/index.html
+++ b/index.html
@@ -7,26 +7,14 @@
     <meta name="description" content="HR Dashboard for managing organizational structure, goals, and performance" />
     <meta name="author" content="MUFT" />
 
-       <!-- Import Inter font -->
-       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-       <!-- Apply Inter globally -->
-       <style>
-         * {
-           font-family: 'Inter', sans-serif;
-         }
-       </style>
-   
-
     <meta property="og:title" content="Position & Job Role - HR Dashboard" />
     <meta property="og:description" content="HR Dashboard for managing organizational structure, goals, and performance" />
     <meta property="og:type" content="website" />
-    
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@MUFT" />
-   
-
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
